# canonsys

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
hub/catalogs/: canon.toml  pyproject.toml
hub/catalogs/src/catalogs/: __init__.py  canonsys_2026_01.py
libs/canon/: pyproject.toml
libs/canon/src/canon/: __init__.py  config.py  exceptions.py  service.py  types.py
libs/canon/src/canon/db/: __init__.py  connection.py  crud.py  entity_crud.py  errors.py  validation.py
libs/canon/src/canon/db/migration/: __init__.py  diff.py  introspect.py  migration.py  rls.py  roles.py  schema.py
libs/canon/src/canon/db/migrations/: 004_charter_runtime.sql
libs/canon/src/canon/dsl/: __init__.py  ast.py  catalog.py  compiler.py  errors.py  lexer.py  parser.py  resolver.py  tokens.py
libs/canon/src/canon/enforcement/: __init__.py  config.py  constraints.py  context.py  degraded.py  errors.py  exceptions.py  executor.py  hooks.py  policy.py  service.py  types.py  vocabulary.py
libs/canon/src/canon/entities/: __init__.py  consent.py  document.py  entity.py
libs/canon/src/canon/entities/charter/: __init__.py  charter.py  phase_execution.py  run.py
libs/canon/src/canon/entities/evidence/: __init__.py  chain.py  evidence.py
libs/canon/src/canon/entities/policy/: __init__.py  adapter.py  authority.py  decision.py  definition.py  release.py  scope.py  status.py
libs/canon/src/canon/entities/shared/: __init__.py  employee.py  organization.py  person.py  protocols.py  session.py  tenant.py  user.py
libs/canon/src/canon/entities/workflows/: __init__.py  document_access.py  queue.py
libs/canon/src/canon/hub/: __init__.py  catalogs.py  domain.py  domain_loader.py  domain_registry.py  executor.py  hub.py  loader.py  package.py  packages.py  registry.py  service_aware_resolver.py
libs/canon/src/canon/runtime/: README.md  __init__.py  cascade.py  conditions.py  evidence.py  grants.py  inbox.py  phase_state.py  registry.py  require_eval.py  roles.py  trigger.py  visualization.py  workflow.py
libs/canon/src/canon/services/: __init__.py
libs/canon/src/canon/services/auth/: __init__.py  exceptions.py
libs/canon/src/canon/utils/: __init__.py  cache.py  calendar.py  endpoints.py  loader.py  pii.py  slo.py  telemetry.py  vocab.py
libs/canon/src/canon/utils/kms/: __init__.py  (+5 more)
libs/canon/tests/: test_jurisdiction_loader.py
libs/canon/tests/core/: __init__.py  conftest.py  test_entity.py
libs/canon/tests/db/: __init__.py  conftest.py  test_diff.py  test_errors.py  test_rls.py  test_roles.py  test_types.py  test_validation.py
libs/canon/tests/dsl/: conftest.py  test_catalog.py  test_compiler.py  test_integration.py  test_lexer.py  test_parser.py  test_resolver.py
libs/canon/tests/enforcement/: __init__.py  test_kron_service.py
libs/canon/tests/enforcement/catalog/: conftest.py
libs/canon/tests/enforcement/constraints/: __init__.py  conftest.py  test_ai_governance.py  test_authorization.py  test_data_protection.py  test_evidence.py  test_timing.py
libs/canon/tests/integration/: __init__.py
libs/canon/tests/runtime/: conftest.py  test_access_check.py  test_cascade.py  test_conditions.py  test_evidence.py  test_grants.py  test_phase_state.py  test_registry.py  test_require_eval.py  test_roles.py  test_trigger.py  test_visualization.py  test_workflow.py
libs/canon/tests/services/: test_service_context.py  test_service_decorators_hooks.py
libs/canon/tests/utils/: test_calendar.py
libs/canon/tests/utils/crypto/: test_hashing.py  test_signer.py
libs/canon/tests/utils/opa/: conftest.py  test_client.py  test_client_input.py  test_decoder.py  test_engine.py  test_orchestrator.py  test_orchestrator_graph.py  test_resolver.py  test_resolver_index.py
libs/canon/tests/utils/privacy/: test_pii.py
libs/canon/tests/utils/security/: test_keys.py
libs/canon/tests/utils/tsa/: test_batch.py  test_external_tsa.py  test_requests.py
libs/canon/tests/utils/verification/: __init__.py  test_canon_policies_functional.py  test_opa_data_provider.py  test_ucs_transform.py  test_ucs_validator.py  test_ucs_validator_functional.py
libs/kron/: pyproject.toml
libs/kron/src/kron/: __init__.py  errors.py  protocols.py
libs/kron/src/kron/core/: __init__.py  element.py  event.py  flow.py  graph.py  node.py  pile.py  progression.py
libs/kron/src/kron/operations/: __init__.py  builder.py  flow.py  node.py  registry.py
libs/kron/src/kron/services/: __init__.py  backend.py  endpoint.py  hook.py  model.py  registry.py
libs/kron/src/kron/session/: __init__.py  exchange.py  message.py  session.py
libs/kron/src/kron/specs/: __init__.py  operable.py  phrase.py  protocol.py  spec.py
libs/kron/src/kron/types/: __init__.py  _sentinel.py  base.py  db_types.py  enums.py  identity.py
libs/kron/src/kron/utils/: __init__.py  _hash.py  _json_dump.py  _lazy_init.py  _utils.py
libs/kron/tests/: __init__.py  conftest.py  test_element.py  test_enums.py  test_event.py  test_flow.py  test_graph.py  test_hash.py  test_node.py  test_pile.py  test_progression.py  test_spec.py  test_utils.py
(+386 files in other folders)
