[project]
name = "canon-catalogs"
version = "2026.1.0"
description = "Schema catalogs for Canon Charter DSL - versioned type registries for HR and base compliance schemas."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ocean (HaiyangLi)", email = "ocean@lionagi.ai" }]

dependencies = [
    "canon",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalogs"]

[tool.uv.sources]
canon = { workspace = true }
