[project]
name = "canon"
version = "1.1.0"
description = "Core primitives for CanonSys — entities, types, gates, evidence"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ocean (HaiyangLi)", email = "ocean@lionagi.ai" }]

dependencies = [
    "kron",
    "anyio>=4.0.0",
    "asn1crypto>=1.5.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "orjson>=3.9.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
rego = [
    "regorus @ git+https://github.com/microsoft/regorus@regorus-v0.5.0#subdirectory=bindings/python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/canon"]

[tool.uv.sources]
kron = { workspace = true }
